mutable and immuable objects

--- a/2.first_class_function.ipynb
+++ b/2.first_class_function.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "ab3ded7b-d7dc-4e9c-b698-2cb927906476",
    "metadata": {},
    "outputs": [
@@ -175,9 +175,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<h1>Test Headline!</h1>\n",
-      "<h1>Another Headline!</h1>\n",
-      "<p>Test Paragraph!</p>\n"
+      "<h1> Test Headline! </h1>\n",
+      "<h1> Another Headline! </h1>\n",
+      "<p> Test Paragraph! </p>\n"
      ]
     }
    ],
@@ -187,8 +187,8 @@
     "def html_tag(tag):\n",
     "\n",
     "    def wrap_text(msg):\n",
-    "        print('<{0}>{1}</{0}>'.format(tag, msg))\n",
-    "        #print(f\"<{tag}\")\n",
+    "        # print('<{0}>{1}</{0}>'.format(tag, msg))\n",
+    "        print(f\"<{tag}> {msg} </{tag}>\")\n",
     "\n",
     "    return wrap_text\n",
     "\n",
